Improving same-coord stepper description in user guide

--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -865,7 +865,9 @@ There are currently 5 power stepping tools :
 
 - `identity`, will step to the prev/next value which identity is the same as the current value.
 - 'equality', will step to the prev/next value which is equals (clojure equality) to the current value.
-- `same-coord` will step to the prev/next value for the same form and coordinate.
+- `same-coord` will step to the prev/next value for the same coordinate. This means it will move to the next recording in
+  the timeline for this exact place in the code you are currently in. You can also see it as take me to all the situations
+  when the current expression executed doesn't matter how we got to it.
 - `custom`, allows you to provide a predicate, which will be used to find the next step.
   If you define it like `(fn [v] (map? v))` will make the power stepper step over all map values.
 - `custom-same-coord`, the same as `custom` but fixed on the current coordinate like `same-coord`.
