--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -1785,15 +1785,85 @@ Then everything should work. The steps are:
     . That should get you into the REPL, where you should type (require '[flow-storm.api :as fs-api])
     . Finally, type (fs-api/local-connect) and you're done!
 
+== Opening forms in editors
+
+You can add this two jvm options to tell FlowStorm how to open forms in files and inside jars :
+
+    - flowstorm.jarEditorCommand : a command with optional \<<JAR>>, \<<FILE>> and \<<LINE>> placeholders
+    - flowstorm.fileEditorCommand : a command with optional \<<FILE>> and \<<LINE>> placeholders
+
+If you define those, clicking on your forms namespaces link should run the provided commands.
+
+Here are some known setups for most common editors :
+
+=== Emacs
+
+[,clojure]
+----
+"-Dflowstorm.jarEditorCommand=emacsclient -n +<<LINE>>:0 <<JAR>>/<<FILE>>"
+"-Dflowstorm.fileEditorCommand=emacsclient -n +<<LINE>>:0 <<FILE>>"
+----
+
+=== VSCode
+
+[,clojure]
+----
+"-Dflowstorm.fileEditorCommand=code --goto <<FILE>>:<<LINE>>"
+----
+
+=== IntelliJ
+
+[,clojure]
+----
+"-Dflowstorm.fileEditorCommand=idea --line <<LINE>> <<FILE>>"
+----
+
+=== Vim
+
+[,clojure]
+----
+"-Dflowstorm.fileEditorCommand=vim +<<LINE>> <<FILE>>"
+----
+
 == Editors/IDEs integration
 
 === Emacs
 
 Checkout https://github.com/flow-storm/cider-storm[Cider Storm] an Emacs Cider front-end with support for Clojure and ClojureScript.
 
+==== Opening forms
+
+You can add this two jvm options to tell FlowStorm how to open forms in files and inside jars.
+
+
+If something doesn't work try the command on your shell first, maybe you need the full path to the binary.
+
 === VSCode
 
+==== Opening forms
+
+You can add this two jvm options to tell FlowStorm how to open forms in files and inside jars.
+
+
+If the files are inside a jar you can put any command here using the <<JAR>>, <<FILE>>, and <<LINE>> placeholders that
+will be executed by FlowStorm to open it. I don't know any for VSCode, if you know how to do it please submit a PR.
+
+[,clojure]
+----
+"-Dflowstorm.jarEditorCommand="
+----
+
 === IntelliJ IDEA (Cursive)
+
+==== Opening forms
+
+You can add this two jvm options to tell FlowStorm how to open forms in files and inside jars.
+
+"-Dflowstorm.jarEditorCommand="
+"-Dflowstorm.fileEditorCommand="
+
+If something doesn't work try the command on your shell first, maybe you need the full path to the binary.
+
 
 == Tutorials and demos
 
